force-app/main/default/objects/Deposit__c/Deposit__c.object-meta.xml
<CustomObject>
    <label>Deposit</label>
    <nameField>
        <displayFormat>DEP-{00000000}</displayFormat>
        <label>Deposit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>