force-app/main/default/objects/Deposit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Account_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>