force-app/main/default/objects/Deposit__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <label>Applied Amount</label>
    <summaryFilterItems>
        <field>Deposit_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Deposit_Application__c.Deposit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Deposit_Application__c.Amount__c</summarizedField>
    <type>Summary</type>
</CustomField>