force-app/main/default/objects/Deposit__c/fields/Deposit_Utilization__c.field-meta.xml
<CustomField>
  <fullName>Deposit_Utilization__c</fullName>
  <label>Deposit Utilization</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Unapplied</fullName><default>true</default><label>Unapplied</label></value>
      <value><fullName>Partially Applied</fullName><default>false</default><label>Partially Applied</label></value>
      <value><fullName>Fully Applied</fullName><default>false</default><label>Fully Applied</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>