force-app/main/default/objects/Deposit__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
  <fullName>Policy_Name__c</fullName>
  <label>Policy Name</label>
  <type>Text</type>
  <length>80</length>
</CustomField>