force-app/main/default/objects/Deposit__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Proposal_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>