force-app/main/default/objects/Deposit__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
  <fullName>Remaining_Amount__c</fullName>
  <label>Remaining Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>BLANKVALUE(Amount__c,0) - BLANKVALUE(Applied_Amount__c,0)</formula>
</CustomField>