force-app/main/default/objects/Deposit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
            <value><fullName>Received</fullName><default>false</default><label>Received</label></value>
            <value><fullName>Refunded</fullName><default>false</default><label>Refunded</label></value>
            <value><fullName>Voided</fullName><default>false</default><label>Voided</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>